Sample3Eternus/src/objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>FACultyID__c</fullName>
        <displayFormat>FAC-{0000}</displayFormat>
        <label>FACultyID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FACultyIDs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Facultys</relationshipLabel>
        <relationshipName>Facultys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FacuyltName__c</fullName>
        <label>FacuyltName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Faculty</label>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facultys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>